# nhutanh-multimodal-image-search

./: .env.example  .gitignore  README.md  app.py  cache.py  config.py  download_videos.py  kaggle_dataset.py  kaggle_download.py  kaggle_pipeline.py  pyproject.toml  qdrant_ingest.py  run.py  utils.py
.github/workflows/: kaggle-pipeline.yml
notebook/: dino-v3-dense-embed.ipynb  dino-v3-embed.ipynb  qwen3-vl-embed.ipynb  siglip2-embed.ipynb
static/css/: style.css
static/js/: app.js
templates/: index.html
