[project]
name = "multimodal-image-search"
version = "1.0.0"
description = "Multimodal image search engine using SigLIP2 and DINOv3 with Kaggle GPU pipeline"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "h5py>=3.16.0",
    "kaggle>=1.7.4,<2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.0",
    "transformers>=5.10.2",
]
