[project]
name = "multimodal-image-search"
version = "1.1.0"
description = "Multimodal image & video search engine using SigLIP2, DINOv3 and Qwen3-VL-Embedding with Kaggle GPU pipeline and Qdrant"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=7.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "h5py>=3.16.0",
    "hiredis>=3.4.0",
    "kaggle>=1.7.4,<2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.9.0",
    "qwen-vl-utils>=0.0.14",
    "redis>=8.0.0",
    "tenacity>=9.0.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.0",
    "transformers>=4.57.0,<5",
    "waitress>=3.0.0",
]
